# official-reg-monitor

./: .gitignore  CHANGELOG.md  Makefile  README.md  install_launchd.sh  monitor.py  publish_github.sh  pyproject.toml  sources.registry.json
.github/workflows/: ci.yml
docs/: distribution.md  source-model.md
launchd/: com.codex.official-reg-monitor.plist
scripts/: build_release.sh  verify_release.sh
src/official_reg_monitor/: cli.py  coching_export.py  config.py  db.py  doctor.py  fetcher.py  html_links.py  normalize.py  paths.py  screening_export.py  timeutil.py
src/official_reg_monitor/data/: schema.sql  sources.registry.json
src/official_reg_monitor/parsers/: __init__.py  eu_cosing_annex.py  generic.py  jp_mhlw_pdf.py  models.py  us_ecfr_xml.py
tests/: test_cli_smoke.py  test_eu_cosing_annex_normalize.py  test_us_ecfr_normalize.py
