[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "official-reg-monitor"
version = "0.1.0"
description = "Source-first monitor for official cosmetic regulation documents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex workspace" }
]
keywords = ["cosmetics", "regulatory", "monitoring", "etl", "ecfr", "cosing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.scripts]
official-reg-monitor = "official_reg_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
official_reg_monitor = ["data/*.sql", "data/*.json"]

